# demo_set

./: .gitignore  README.md  build.gradle  buildDemoApp.ps1  buildDemoApp.sh  deploy_local_testing.ps1  git.exe.stackdump  gradle.properties  log.txt  settings.gradle
app/: CMakeLists.txt  build.gradle
app/release/: output-metadata.json
app/release/baselineProfiles/0/: app-release.dm
app/release/baselineProfiles/1/: app-release.dm
app/src/main/: AndroidManifest.xml
app/src/main/assets/: itemData.xml  itemDataRes.xml
app/src/main/cpp/: demo-native.cpp
app/src/main/res/drawable/: bg_avatar_placeholder.xml  bg_gradient.xml  bg_instruction_panel.xml  bg_list_rounded.xml  bg_material_header.xml  bg_section.xml  bg_switch_border.xml  bg_title_border.xml  button_tint.xml  custom_toast_background.xml  edittext_rounded_bg.xml  ic_add_24dp.xml  ic_bluetooth.xml  ic_exit.xml  ic_menu_24dp.xml  ic_menu_network_wifi.xml  ic_notifications_24dp.xml  ic_remove_red_eye_24dp.xml  ic_search_24dp.xml  ic_settings.xml  item_border.xml  item_pressed.xml  item_selector.xml  select_item.xml  shape_line.xml  switch_button.xml  unselect_item.xml
app/src/main/res/font/: montserrat.xml
app/src/main/res/layout/: activity_data_store_demo.xml  activity_data_store_demo2.xml  activity_demo_alarm.xml  activity_demo_binder.xml  activity_demo_binder_legacy.xml  activity_demo_binding.xml  activity_demo_biometric.xml  activity_demo_bluetooth.xml  activity_demo_camera2.xml  activity_demo_camera2_act2.xml  activity_demo_camerax.xml  activity_demo_data_binding.xml  activity_demo_data_binding_ex.xml  activity_demo_database.xml  activity_demo_database2.xml  activity_demo_device_admin.xml  activity_demo_encrypted_shared_prefs.xml  activity_demo_encryption.xml  activity_demo_execute_task.xml  activity_demo_flash_light.xml  activity_demo_floating_dialog.xml  activity_demo_floating_window.xml  activity_demo_gif.xml  activity_demo_graphics.xml  activity_demo_jni.xml  activity_demo_job_svr.xml  activity_demo_main.xml  activity_demo_material_log_in.xml  activity_demo_mlkit.xml  activity_demo_my_handler_thread.xml  (+62 more)
app/src/main/res/layout-land/: activity_demo_alarm.xml  activity_demo_binder.xml
app/src/res/layout/: item_bt_scan_layout.xml
(+561 files in other folders)
